[gd_scene load_steps=6 format=3 uid="uid://ba0a03ibw3jqe"]

[ext_resource type="Script" path="res://texture_icon.gd" id="1_3h52m"]
[ext_resource type="Shader" path="res://squad.gdshader" id="2_f7ed0"]
[ext_resource type="Texture2D" uid="uid://dkgubj88nw17h" path="res://art/command_sprites/button_background.png" id="3_vodpt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cle1f"]
resource_local_to_scene = true
shader = ExtResource("2_f7ed0")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 4.567
shader_parameter/on = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iirww"]
resource_local_to_scene = true
shader = ExtResource("2_f7ed0")
shader_parameter/line_color = Color(1, 1, 0, 1)
shader_parameter/line_thickness = 4.924
shader_parameter/on = false

[node name="TextureIcon" type="Control"]
material = SubResource("ShaderMaterial_cle1f")
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_3h52m")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_iirww")
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("3_vodpt")

[node name="IconTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 72.0
expand_mode = 2

[node name="Hotkey" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -3.0
offset_right = 12.0
offset_bottom = 13.0
texture = ExtResource("3_vodpt")
expand_mode = 2

[node name="Label" type="Label" parent="Hotkey"]
layout_mode = 0
offset_top = -1.0
offset_right = 16.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
